--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="bootstrap.css">
+  <link rel="stylesheet" href="style.css">
   <title>Health Hub | Home</title>
 </head>
 
@@ -325,7 +325,7 @@
 
   </div>
 </body>
-<script src="js/jquery-3.6.0.js"></script>
+<script src="jquery-3.6.0.js"></script>
 <script>
   $(document).ready(function () {
     $('#day-btn').click(function (e) {
